[tool.poetry]
name = "nornir_pyez"
version = "0.1.0"
description = "PyEZ Plugin for Nornir"
authors = ["Knox Hutchinson <knox@knoxsdata.com>"]
license = "Apache-2.0"

[tool.poetry.plugins."nornir.plugins.connections"]
"pyez" = "nornir_pyez.plugins.connections:Pyez"

[tool.poetry.dependencies]
python = "^3.6"
junos-eznc = "^2.5"
nornir = { version = "~3.0.0b1", allow-prereleases = true }
xmltodict = "0.12.0"

[tool.poetry.dev-dependencies]
nornir_utils = { version = "*", allow-prereleases = true }


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"