[tool.poetry]
name = "nornir_pyez"
version = "0.3.0"
description = "PyEZ Plugin for Nornir"
authors = ["Knox Hutchinson <knox@knoxsdata.com>"]
license = "Apache-2.0"

[tool.poetry.plugins."nornir.plugins.connections"]
"pyez" = "nornir_pyez.plugins.connections:Pyez"

[tool.poetry.dependencies]
python = "^3.9"
junos-eznc = "^2.7.3"
nornir = { version = ">=3.5.0", allow-prereleases = true }
xmltodict = "0.14.2"

[tool.poetry.group.dev.dependencies]
nornir_utils = { version = "*", allow-prereleases = true }


[build-system]
requires = ["poetry>=2.1.1"]
build-backend = "poetry.masonry.api"
